small pre-final touches

--- a/CogSciNAP_reSubmit.Rmd
+++ b/CogSciNAP_reSubmit.Rmd
@@ -780,7 +780,7 @@ The two variants of the sonority index values given in Table \@ref(tab:hierarchy
 ### Sonority principles {#sec:principles}
 
 Sequencing principles can be understood as a mapping scheme between the ranks of a sonority hierarchy and the linear order of symbolic speech segments.
-Modern formulations of such principles, which use the ordinal sonority hierarchy to generalize over the phonotactics of consonantal sequences in terms of *sonority slopes* were developed mainly throughout the seventies and eighties of the twentieth century in seminal works such as @hooper1976introduction; @steriade1982greek; @selkirk1984majorsk; @harris1983syllable; @mohanan1986theory, and @clements1990role.
+Modern formulations of such principles, which use the ordinal sonority hierarchy to generalize over the phonotactics of consonantal sequences in terms of *sonority slopes* were developed mainly throughout the seventies and eighties of the twentieth century in seminal works such as @hooper1976introduction; @steriade1982greek; @selkirk1984majorsk; @harris1983syllablesk; @mohanan1986theory, and @clements1990role.
 <!-- [^cf-sequencingclassics] -->
 
 (ref:slopes-pl-lp) Schematic depiction of the sonority slopes of two onset clusters, *plV* and *lpV*. The red line denotes the sonority slope of the onset cluster (i.e., the two onset consonants), while the grey line denotes the slope between the second consonant and the vowel at the nucleus position (always a rise in these cases). The angle of the red lines reflects the well-formed rising sonority slope of the onset cluster in *plV* and the ill-formed falling sonority slope of the onset cluster in *lpv*. Image taken from Anonymous (in press).
@@ -878,7 +878,7 @@ tribble(~x , ~y, ~line,
 The observation that sonority summarizes an essential quality that is related to vowels and their propensity to deliver a relatively steady harmonic structure, highlighting pitch and formant information, is by no means new. Previous proposals already defined sonority as either relating to vowels in some general way, or more specifically relating to voicing or vibration of the glottal folds, or to the clarity/strength of the formants.[^cf-list] A few previous accounts went even further, by addressing the function of this vowel-centric feature, suggesting that sonority may be related to periodic energy or pitch/tone [@lass1988phonology; @nathan1989preliminaries; @puppel1992sonority; @ladefoged1997linguistic; @heselwood1998unusual]. What all these proposals share, explicitly or implicitly, is a recurring insight about a strong link between the preferred type of segmental material in syllabic nuclei and a set of features that conspire to optimize pitch intelligibility, a property which characterizes vowels more than consonants. 
 
 Pitch is an inseparable communicative dimension of all linguistic sound systems [@bolinger1978intonation; @house1990tonal; @cutler1997prosody; @roettger2019tune], whether it is lexically determined as in linguistic *tone*, 
-or post-lexically employed to convey intonation, i.e., the linguistic *tune* [e.g., @pike1945intonation; @tHart1990perceptual; @jun2005prosodicsk; @jun2015prosodicsk]. 
+or post-lexically employed to convey intonation, i.e., the linguistic *tune* [e.g., @pike1945intonationsk; @tHart1990perceptual; @jun2005prosodicsk; @jun2015prosodicsk]. 
 Tones are used to distinguish lexical items while tunes are used to demarcate units as well as to modulate semantics (e.g., information structure and sentence modality) and to express a vast array of non-propositional meanings (e.g., discourse-pragmatic intention, emotional state, socio-indexical identity, and attitudinal stance). The importance of pitch to human communication cannot be overstated.
 
 Crucially, linguistic pitch events are commonly assumed to target syllable-sized units as their "docking site", regardless of the type of pitch event, whether it is a lexical tone or a post-lexical tune [@lehiste1977suprasegmentals]. 
@@ -921,7 +921,7 @@ The main problem with intensity-based accounts is related to the distinction bet
 ###  Acoustic intensity $≠$ perceived loudness {#sec:intensity}
 
 The acoustic signal has certain physical qualities contributing to its overall power, but they have different effects on the perceptual system of the human hearer. This discrepancy between acoustic intensity and perceived loudness is a well-known problem, playing a role at different dimensions of the mapping between acoustics and perception.
-The prominent points of departure between acoustic intensity and perceived loudness include different frequency bands that lead to different loudness perception [e.g., @fletcher1933loudness; @plack1995loudness; @suzuki2004equal], different signal durations that have different loudness effects [e.g., @turk1996processing; @olsen2010loudness; @moore2013anintro 143], and different periodic structures, where the difference between harmonic structures vs. random noise, and their respective spectral bandwidths, was also found to influence perception of loudness [e.g., @hellman1972asymmetry; @stevens1972perceived; @bao2010psychoacousticsk].
+The prominent points of departure between acoustic intensity and perceived loudness include different frequency bands that lead to different loudness perception [e.g., @fletcher1933loudness; @plack1995loudness; @suzuki2004equal], different signal durations that have different loudness effects [e.g., @turk1996processing; @olsen2010loudness; @moore2013anintro 143], and different periodic structures, where the difference between harmonic structures vs. random noise, and their respective spectral bandwidths, was also found to influence perception of loudness [e.g., @hellman1972asymmetry; @stevens1972perceivedsk; @bao2010psychoacousticsk].
 
 Acoustic intensity is therefore a physical description of sound waves in space which does not consistently relate to how loud we perceive them, or to any other perceptual phenomenon for that matter.
 
@@ -934,7 +934,7 @@ Our auditory system perceives the aperiodic high-mid frequencies of many obstrue
 
 Given the above, we should anticipate that perceived loudness will not be a good candidate for the acoustic correlate of sonority hierarchies, as a measure of perceived loudness would bring all speech sounds closer together by diminishing the distinctions provided by acoustic intensity. Indeed, although good approximations of perceived loudness from acoustic signals are available [e.g., @seshadri2009perceived; @skovenborg2012loudnesssk; @lund2014loudnesssk; @itu2015algorithmssk], we are unaware of attempts to employ such measures for sonority. 
 
-Instead of attempts to map acoustic intensity with perception in terms of perceived loudness, most successful endeavors that use intensity-based measures as correlates of sonority do it by essentially enhancing the intensity-loudness discrepancy, targeting certain frequency bands to---roughly speaking---discriminate against energy at the higher frequencies, that are more characteristic of obstruents, in favor of energy at low-mid ranges of the spectrum, that are more characteristic of sonorants and particularly vowels [e.g., @Pfitzinger1996syllablesk; @port1996dynamic; @fant2000source; @galves2002sonoritysk; @wang2007robust; @tilsen2013speech; @patha2016syllablesk; @nakajima2017english; @rasanen2018pre]. 
+Instead of attempts to map acoustic intensity with perception in terms of perceived loudness, most successful endeavors that use intensity-based measures as correlates of sonority do it by essentially enhancing the intensity-loudness discrepancy, targeting certain frequency bands to---roughly speaking---discriminate against energy at the higher frequencies, that are more characteristic of obstruents, in favor of energy at low-mid ranges of the spectrum, that are more characteristic of sonorants and particularly vowels [e.g., @Pfitzinger1996syllablesk; @port1996dynamicsk; @fant2000source; @galves2002sonoritysk; @wang2007robust; @tilsen2013speech; @patha2016syllablesk; @nakajima2017english; @rasanen2018pre]. 
 The relative success of such metrics is not commonly motivated on perceptual grounds. However, they are often tightly linked to the perceptual quality that is identified with sonority in this work---the capacity to perceive pitch.
 
 
@@ -1289,7 +1289,7 @@ Table \@ref(tab:targetlist) presents 29 CC sequence types that reflect 16 differ
 Of the 29 different clusters, only 3 clusters regularly occur in German words, /ʃp, ʃm, fl/, 6 clusters are attested to some degree in German loanwords, /sp, sf, sm, vl, zv, ml/ [@van2012sonority], and one cluster, /ʃf/, may be considered as similar to German licit clusters with a voiced obstruent following a voiceless one (i.e., /ʃv/ and /t͡sv/).
 Thus, the experimental set contains 19 cluster types that are unattested in German words. These unattested CC types appear in 13 of the 16 unique combinations, excluding the three rising sonority clusters with a liquid in *C*~2~ (e.g., /fl, vl, ml/), that are all attested in German complex onsets to some degree (yet only marginally so in the case of /vl/ and /ml/).
 
-Out of the 29 different cluster types in Table \@ref(tab:targetlist), more clusters occur regularly in Modern Hebrew [see @asherov2019syllable]. These include all of the eight sibilant-initial clusters, /sp, ʃp, sf ʃf, sm, ʃm, zm, zv/, and the liquid-second clusters, /fl, vl/. The voiceless cluster /ft/ and the /m/-initial clusters /ml, mn/ are marginally attested in Modern Hebrew [@asherov2019syllable 75, 86].
+Out of the 29 different cluster types in Table \@ref(tab:targetlist), more clusters occur regularly in Modern Hebrew [see @asherov2019syllablesk]. These include all of the eight sibilant-initial clusters, /sp, ʃp, sf ʃf, sm, ʃm, zm, zv/, and the liquid-second clusters, /fl, vl/. The voiceless cluster /ft/ and the /m/-initial clusters /ml, mn/ are marginally attested in Modern Hebrew [@asherov2019syllablesk 75, 86].
 Thus, the experimental set contains 16 cluster types that are unattested in Hebrew words.
 These unattested CC types appear in 12 of the 16 unique combinations in Table \@ref(tab:targetlist), excluding the three rising sonority clusters with a liquid in *C*~2~ (e.g., /fl, vl, ml/), and the *fricative*-*stop* clusters (including /ft/), although note that /ft/ and /ml/ are only marginally attested in Hebrew complex onsets.
 
@@ -2533,7 +2533,7 @@ The incompatibility between the continuous and the discrete types of description
 
 ### Connectionism {#sec:connectionism}
 
-The *connectionist* program in cognitive psychology [e.g., @rumelhart1986parallel1; @rumelhart1986parallel2; @bates1993counectionism] was set to change that classic view with the introduction of connectionist models to phonology [e.g., @goldsmith1992local; @laks1995connectionistsk; @joanisse2000connectionist; @smolensky2006harmonic; @tupper2012sonority]. These models replaced classic symbolic models with *neuromimetic* models [@laks1995connectionistsk 52] that attempt to improve the cognitive plausibility of language models with architectures that resemble neurobiological systems.
+The *connectionist* program in cognitive psychology [e.g., @rumelhart1986parallel1; @rumelhart1986parallel2; @bates1993counectionism] was set to change that classic view with the introduction of connectionist models to phonology [e.g., @goldsmith1992local; @laks1995connectionistsk; @joanisse2000connectionist; @smolensky2006harmonic; @tupper2012sonoritysk]. These models replaced classic symbolic models with *neuromimetic* models [@laks1995connectionistsk 52] that attempt to improve the cognitive plausibility of language models with architectures that resemble neurobiological systems.
 
 It should be noted, though, that the main focus of connectionist models is not so much the symbols in the system as much as it is the classic processes of symbol manipulation. Connectionist models present alternatives to traditional symbol manipulation rules, like the linear rules in generative phonology [@chomsky1968spesk]. The latter are practical in terms of the descriptive notation, but they cannot (and mostly do not) attempt to reflect the cognitive functions of the brain.
 
@@ -2567,11 +2567,11 @@ The universality of sonority principles thus implies innate knowledge of ordinal
 The interpretation of Berent's findings has been a matter of interest in the literature. Some responses, like @daland2011explaining and @hayes2011interpreting, have argued that the universal phonotactic behaviors that Berent et al. present can be shown to result from speakers' ability to generalize categories and distributions from the attested lexicon, and use analogy and probabilities to predict unattested forms. 
 Such models can successfully apply statistical learning methods based on the lexicon, without a requirement for prior formal knowledge of sonority [e.g., @jurafsky2009speech; @coleman1997stochastic; @vitevitch2004webbasedsk; @hayes2008maximum; @hayes2011interpreting; @bailey2001determinants; @albright2009feature; @futrell2017generative; @jarosz2017inputsk; @mayer2019phonotacticsk; and @mirea2019usingsk]. 
 
-Interestingly, connectionist models, such as @goldsmith1992local, @laks1995connectionistsk @smolensky2014optimization and @tupper2012sonority, also seem to be quite compatible with what is considered here as the symbolic version of NAP. Connectionist models were historically related to an opposition to the classic symbol-based models (see Subsection \@ref(sec:connectionism)). However, the inputs and outputs of these models are expressed in discrete symbols and they are designed to capture generalizations in terms of the weights of connections in the system, which may, indeed, serve as a good mechanistic description of top-down operations. 
+Interestingly, connectionist models, such as @goldsmith1992local, @laks1995connectionistsk @smolensky2014optimization and @tupper2012sonoritysk, also seem to be quite compatible with what is considered here as the symbolic version of NAP. Connectionist models were historically related to an opposition to the classic symbol-based models (see Subsection \@ref(sec:connectionism)). However, the inputs and outputs of these models are expressed in discrete symbols and they are designed to capture generalizations in terms of the weights of connections in the system, which may, indeed, serve as a good mechanistic description of top-down operations. 
 Likewise, many other models that successfully describe phonotactic knowledge, such as the Bayesian models in @wilson2013bayesian; and @wilson2014effects, are essentially describing what we consider here to be the top-down mode of the system, which is somewhat disconnected from the physical and cognitive sources of phonotactic phenomena.
 
 In contrast to traditional sonority principles, NAP was designed to be compatible with general cognitive processes and auditory perception, such that no unique assumptions are required for innate formal knowledge of sonority. 
-Sonority-based patterns in NAP arise from the general cognitive process that underlies the parsing of the stream of speech into syllables with a pitch-bearing nucleus (i.e., nucleus competition). This requirement for pitch-bearing units may be explained in evolutionary timescales as the inevitable result of the important role of pitch in speech communication [@bolinger1978intonation; @cutler1997prosody; @roettger2019tune] given the observation that tune-text integration occurs with syllable-sized units [e.g., @goldsmith1976autosegmental; @liberman1975intonationalsk; @pierrehumbert1980phoneticssk; @ladd2008intonational]. 
+Sonority-based patterns in NAP arise from the general cognitive process that underlies the parsing of the stream of speech into syllables with a pitch-bearing nucleus (i.e., nucleus competition). This requirement for pitch-bearing units may be explained in evolutionary timescales as the inevitable result of the important role of pitch in speech communication [@bolinger1978intonation; @house1990tonal; @cutler1997prosody; @roettger2019tune] given the observation that tune-text integration occurs with syllable-sized units [e.g., @goldsmith1976autosegmental; @liberman1975intonationalsk; @pierrehumbert1980phoneticssk; @ladd2008intonational]. 
 
 The NAP approach appears capable of synthesizing the different views on the origins of universal sonority. 
 <!-- Like many of the works by Berent and her colleagues,  -->
