--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,12 +1,71 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2021-12-08 00:20:31 +0100 
+%% Created for Aviad Albert at 2021-12-23 23:19:59 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inbook{tupper2012sonoritysk,
+	Address = {Berlin; Boston},
+	All_Isbns = {9783110261516 3110261510},
+	Author = {Tupper, Paul K. and Fry, Michael},
+	Booktitle = {The Sonority Controversy},
+	Citation_Identifier = {Tupper 2012},
+	Date-Added = {2021-12-23 23:18:52 +0100},
+	Date-Modified = {2021-12-23 23:19:39 +0100},
+	Editor = {Parker, Stephen G.},
+	Isbn = {9783110261516},
+	Notes = {(388) (385) (390) (393) (389) (387) (394) (386) (394)},
+	Oclcid = {879238759},
+	Pages = {385-409},
+	Publicationstatus = {Published},
+	Publisher = {De Gruyter Mouton},
+	Ris_Reference_Number = {879238759},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Tupper%2C%20K/2012/Sonority%20and%20syllabification%20i.pdf,Sente,},
+	Title = {Sonority and Syllabification in a Connectionist Network: An Analysis of {BrbrNet}},
+	Uuid = {73B363DF-1E0A-4FEA-8FAC-1D277DA5CCC7},
+	Year = {2012}}
+
+@article{stevens1972perceivedsk,
+	Author = {Stevens, S. S.},
+	Citation_Identifier = {Stevens 1972},
+	Date-Added = {2021-12-23 23:16:33 +0100},
+	Date-Modified = {2021-12-23 23:17:35 +0100},
+	Doi = {10.1121/1.1912880},
+	Issn = {0001-4966},
+	Journal = {The Journal of the Acoustical Society of America},
+	Notes = {(577) (577)},
+	Number = {2B},
+	Pages = {575-601},
+	Publicationstatus = {Published},
+	Publisher = {Acoustical Society of AmericaASA},
+	Sente_Internal_Pdf_Cover_Page_Counts_By_Attachment_Uuid = {\{"FDA86538-E29F-4C84-806A-354700A444C0":1\}},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Stevens%2C%20SS/2005/Perceived%20Level%20of%20Noise%20by%20Ma.pdf,Sente,},
+	Title = {Perceived Level of Noise by {Mark VII} and Decibels {(E)}},
+	Uuid = {A1781406-A81B-40C4-AE1C-ABC4780020D4},
+	Volume = {51},
+	Web_Data_Source = {CoINs},
+	Year = {1972},
+	Bdsk-Url-1 = {https://doi.org/10.1121/1.1912880}}
+
+@inproceedings{port1996dynamicsk,
+	Author = {Port, Robert and Cummins, Fred and Gasser, Michael},
+	Booktitle = {Proceedings of the {Chicago Linguistic Society}},
+	Citation_Identifier = {Port 1996},
+	Date-Added = {2021-12-23 23:09:58 +0100},
+	Date-Modified = {2021-12-23 23:10:24 +0100},
+	Keywords = {Repetitive patterns},
+	Notes = {(4) (19) holy shit!(6) (15) what's the reason for this effort? why keep constant? yes, speaker and hearer adjust to facilitate effective lexical retrieval by chunking and to detect changes in speech rate. why would they need to "keep the average mora duration constant"?},
+	Organization = {Department of Linguistics, University of Chicago},
+	Publicationstatus = {Published},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Port%2C%20R/1996/A%20dynamic%20approach%20to%20rhythm%20i%20%232.pdf,Sente,},
+	Tags = {Repetitive patterns},
+	Title = {A dynamic approach to rhythm in language: Toward a temporal phonology},
+	Uuid = {574E8337-07A8-4074-9D84-9423606F8C5E},
+	Year = {1996}}
 
 @article{albertIPsonoritysk,
 	Author = {Albert, Aviad},
