anonymized further for resubmission

--- a/CogSciNAP_reSubmit.Rmd
+++ b/CogSciNAP_reSubmit.Rmd
@@ -1463,7 +1463,7 @@ ggplot(subjects_heb, aes(x="", fill=subject_age)) +
 
 ### Experiment 1
 
-The exploratory pilot study consisted of 12 subjects (two males and ten females), all native German-speaking students from the Technische Hochschule Köln, who volunteered to participate in the study. The experiment was administered in a quiet room at the institute's facility in Cologne. The mean age of participants in the pilot study was 25 (21--30).
+The exploratory pilot study consisted of 12 subjects (two males and ten females), all native German-speaking students from the Technische Hochschule Köln, who volunteered to participate in the study. The experiment was administered in a quiet room at the institute's facility. The mean age of participants in the pilot study was 25 (21--30).
 
 ### Experiment 2
 
@@ -1527,7 +1527,7 @@ Fifty-one native German speakers (who did not participate in the exploratory pil
 <!-- Fifty-one native German speakers (`r length(which(subjects_main$subject_gender=="female"))` females, `r length(which(subjects_main$subject_gender=="male"))` males, and `r length(which(subjects_main$subject_gender=="other"))` "others") participated in Experiment 2, of which `r length(which(subjects_main$subject_german_native=="monolingual"))` were monolingual (the `r length(which(subjects_main$subject_german_native=="multilingual"))` bilingual speakers had Polish, Low German, and Hebrew as their heritage language). The vast majority (`r length(which(subjects_main$subject_age =="19-29"))` out of 51) were between the ages 19-29. Eight participants were between 30-39, and `r length(which(subjects_main$subject_age =="40-59"))` participants were between 40-59 years old. There were also two younger participants, between 13 and 18 years old. The vast majority (`r length(which(subjects_main$subject_handedness =="right-handed"))` of 51 participants) were right-handed.  -->
 <!-- `r length(which(subjects_main$subject_education =="school"))` of the 51 participants had not yet acquired an academic degree at the time of the task (designated "school" in Figure \@ref(fig:participantsGer)), `r length(which(subjects_main$subject_education =="undergraduate"))` finished an *undergraduate* (*bachelor*) degree and `r length(which(subjects_main$subject_education =="graduate"))` acquired advanced *graduate* academic degrees (*master* and above). -->
 
-Of the 51 participants, 34 were students at the University of Cologne who took part in the experiment at the sound attenuated booth of the phonetics laboratory. The other 17 participants took part in the experiment at three different locations---all small quiet rooms within private apartments. All subjects were paid five Euros for their participation. 
+Of the 51 participants, 34 were students at a major German university who took part in the experiment at the sound attenuated booth of the phonetics laboratory. The other 17 participants took part in the experiment at three different locations---all small quiet rooms within private apartments. All subjects were paid five Euros for their participation. 
 
 We excluded the responses from one participant who failed in our participant inclusion criterion requiring accuracy of at least 75% with bi-vocalic fillers. The bi-vocalic fillers of the forms /CəCal/ and /əCCal/ link correct responses to the disyllabic choice ("2"), and we expect relatively few monosyllabic choices ("1") in response to stimuli with two separate vowels. 
 Indeed, the overall average accuracy of all the 51 participants, when responding to bi-vocalic filler stimuli, was 96%. The excluded participant achieved a much lower accuracy score for bi-vocalic fillers, nearing chance-level with 65%.
